# my-library-api

./: pyproject.toml
.github/workflows/: deploy-heroku.yml
app/: main-old.py  main.py
app/config/: database.py
app/core/: auth.py  config.py  database.py  enums.py  firebase_admin_config.py
app/core/settings/: app.py  base.py  development.py
app/dto/: book_dtos.py  book_schema.py  common_dtos.py  common_schema.py  user_dtos.py
app/entities/: book.py  common.py  user.py
app/helpers/: response.py  string.py
app/middlewares/: custom_server_response_header.py
app/models/: book_models.py
app/routes/: admin_user_route.py  book_route.py  file_route.py
app/services/: book_service.py  file_service.py  firebase_storage_service.py  user_service.py
tests/: test_my_library_api.py
